# rust_diff

./: Cargo.toml  README.md  __init__.py  build.rs  diff_results_ui.py  install_pyside.py  librust_diff.dylib  plugin.json
src/: algorithms.rs  database.rs  ffi.rs  lib.rs  matching.rs  mock.rs  similarity.rs  types.rs  ui.rs
