[package]
name = "rust_diff"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_diff"
crate-type = ["cdylib"]

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api", branch = "dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
rustc-hash = "1.1"
petgraph = "0.6"
itertools = "0.11"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"

[build-dependencies]
cc = "1.0"

# CLI binary disabled - causing compilation errors
# [[bin]]
# name = "rust_diff_cli"
# path = "src/bin/cli.rs"